<resources>
    <string name="app_name">FarmerEats</string>

    <string name="title_1">Quality</string>
    <string name="intro_1">Sell your farm fresh products directly to \nconsumers, cutting out the middleman and \nreducing emissions of the global supply chain.</string>

    <string name="title_2">Convenient</string>
    <string name="intro_2">Our team of delivery drivers will make sure \nyour orders are picked up on time and \npromptly delivered to your customers.</string>

    <string name="title_3">Local</string>
    <string name="intro_3">We love the earth and know you do too! \nJoin us in reducing our local carbon footprint \none order at a time.</string>

    <string name="join_btn_text">Join the movement!</string>
    <string name="login_btn_text"><u>Login</u></string>

    <string name="on_boarding">On Boarding</string>

    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>

    <string name="welcome_back">Welcome Back!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="reset_password">Reset Password</string>

    <string name="new_here">New here?</string>
    <string name="create_account">Create account</string>
    <string name="remember_your_password">Remember your pasword?</string>
    <string name="forgot">Forgot?</string>
    <string name="login">Login</string>

    <string name="send_code">Send Code</string>
    <string name="submit">Submit</string>
    <string name="resend_code"><u>Resend Code</u></string>

    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>

    <string name="or_login_with">or login with</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_apple_id">Login with Apple ID</string>
    <string name="login_with_facebook">Login with Facebook</string>

</resources>