<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginSliderLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/signInTitleTextView"
        style="@style/OnBoardingTextStyle"
        android:text="@string/welcome_back"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.1300"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1765"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/WrapContentStyle"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/signInTitleTextView"
        app:layout_constraintTop_toBottomOf="@id/signInTitleTextView"
        app:layout_constraintVertical_bias="0.03703">

        <TextView
            android:id="@+id/promptTextView"
            style="@style/SignInPageTextStyle"
            android:text="@string/new_here"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/promptActionButton"
            style="@style/ActionTextViewStyle"
            android:layout_marginStart="6dp"
            android:text="@string/create_account"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
    </LinearLayout>

    <EditText
        android:id="@+id/emailEditText"
        style="@style/SignInPageEditTextStyle"
        android:autofillHints="emailAddress"
        android:drawableStart="@drawable/ic_at_symbol"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/signInTitleTextView"
        app:layout_constraintVertical_bias="0.179"
        tools:ignore="MissingConstraints,TextContrastCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/passwdEditText"
        style="@style/SignInPageEditTextStyle"
        android:autofillHints="password"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:layout_constraintVertical_bias="0.0496"
        tools:ignore="MissingConstraints,TextContrastCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/forgotPasswdButton"
        style="@style/ActionTextViewStyle"
        android:text="@string/forgot"
        app:layout_constraintBottom_toBottomOf="@id/passwdEditText"
        app:layout_constraintEnd_toEndOf="@id/passwdEditText"
        app:layout_constraintHorizontal_bias="0.9515"
        app:layout_constraintStart_toStartOf="@id/passwdEditText"
        app:layout_constraintTop_toTopOf="@id/passwdEditText"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <LinearLayout
        android:id="@+id/otpEditTextLayout"
        style="@style/SignInPageLayoutStyle"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintTop_toBottomOf="@id/signInTitleTextView"
        app:layout_constraintVertical_bias="0.179"
        app:layout_constraintWidth_percent="0.89"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/otpEditText1"
            style="@style/OtpEditTextStyle"
            android:autofillHints="password"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/otpEditText2"
            style="@style/OtpEditTextStyle"
            android:autofillHints="password"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/otpEditText3"
            style="@style/OtpEditTextStyle"
            android:autofillHints="password"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/otpEditText4"
            style="@style/OtpEditTextStyle"
            android:autofillHints="password"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/otpEditText5"
            style="@style/OtpEditTextStyle"
            android:autofillHints="password"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/loginSubmitButton"
        style="@style/SignInPageLayoutStyle"
        android:backgroundTint="@color/onboardingPage2Color"
        android:text="@string/login"
        android:textSize="18sp"
        app:layout_constraintHeight_percent="0.0616"
        app:layout_constraintTop_toBottomOf="@id/passwdEditText"
        app:layout_constraintVertical_bias="0.0776"
        tools:ignore="MissingConstraints,TextContrastCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/resendOtpButton"
        style="@style/ConstraintElementsStyle"
        android:text="@string/resend_code"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/loginSubmitButton"
        app:layout_constraintVertical_bias="0.042"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/otherLoginText"
        style="@style/OtherOptionTextStyle"
        android:text="@string/or_login_with"
        app:layout_constraintTop_toBottomOf="@id/loginSubmitButton"
        app:layout_constraintVertical_bias="0.096"
        tools:ignore="MissingConstraints,SmallSp,TextContrastCheck" />

    <LinearLayout
        android:id="@+id/otherButtonsLayout"
        style="@style/SignInPageLayoutStyle"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintHeight_percent="0.062"
        app:layout_constraintTop_toBottomOf="@id/otherLoginText"
        app:layout_constraintVertical_bias="0.1138"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/googleLoginButton"
            style="@style/OtherLoginButtonStyle"
            android:contentDescription="@string/login_with_google"
            android:src="@drawable/ic_login_google" />

        <ImageView
            android:id="@+id/appleLoginButton"
            style="@style/OtherLoginButtonStyle"
            android:contentDescription="@string/login_with_apple_id"
            android:src="@drawable/ic_login_apple" />

        <ImageView
            android:id="@+id/fbLoginButton"
            style="@style/OtherLoginButtonStyle"
            android:contentDescription="@string/login_with_facebook"
            android:src="@drawable/ic_login_facebook" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>