<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/signInTitleTextView"
        style="@style/OnBoardingTextStyle"
        android:text="@string/welcome_back"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.1300"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1765"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/signInTitleTextView"
        app:layout_constraintTop_toBottomOf="@id/signInTitleTextView"
        app:layout_constraintVertical_bias="0.03703">
        <TextView
            android:id="@+id/signInPromptTextView"
            style="@style/SignInPageTextStyle"
            android:text="@string/new_here"
            tools:ignore="TextContrastCheck" />
        <TextView
            android:id="@+id/signInPromptActionButton"
            style="@style/ActionTextViewStyle"
            android:layout_marginStart="6dp"
            android:text="@string/create_account"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        style="@style/SignInPageLayoutStyle"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintTop_toBottomOf="@id/signInTitleTextView"
        app:layout_constraintVertical_bias="0.179"
        app:layout_constraintWidth_percent="0.89"
        tools:ignore="MissingConstraints">
        <EditText
            android:id="@+id/otpEditText1"
            style="@style/OtpEditTextStyle"
            android:autofillHints="password"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />
        <EditText
            android:id="@+id/otpEditText2"
            style="@style/OtpEditTextStyle"
            android:autofillHints="password"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />
        <EditText
            android:id="@+id/otpEditText3"
            style="@style/OtpEditTextStyle"
            android:autofillHints="password"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />
        <EditText
            android:id="@+id/otpEditText4"
            style="@style/OtpEditTextStyle"
            android:autofillHints="password"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />
        <EditText
            android:id="@+id/otpEditText5"
            style="@style/OtpEditTextStyle"
            android:autofillHints="password"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />
    </LinearLayout>

    <EditText
        android:id="@+id/emailEditText"
        style="@style/SignInPageEditTextStyle"
        android:autofillHints="emailAddress"
        android:drawableStart="@drawable/ic_at_symbol"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/signInTitleTextView"
        app:layout_constraintVertical_bias="0.179"
        tools:ignore="MissingConstraints,TextContrastCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/passwdEditText"
        style="@style/SignInPageEditTextStyle"
        android:autofillHints="password"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:layout_constraintVertical_bias="0.0496"
        tools:ignore="MissingConstraints,TextContrastCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/forgotPasswdButton"
        style="@style/ActionTextViewStyle"
        android:text="@string/forgot"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/passwdEditText"
        app:layout_constraintEnd_toEndOf="@id/passwdEditText"
        app:layout_constraintHorizontal_bias="0.9515"
        app:layout_constraintStart_toStartOf="@id/passwdEditText"
        app:layout_constraintTop_toTopOf="@id/passwdEditText"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/loginSubmitButton"
        style="@style/SignInPageLayoutStyle"
        android:backgroundTint="@color/onboardingPage2Color"
        android:text="@string/login"
        android:textSize="18sp"
        app:layout_constraintHeight_percent="0.0616"
        app:layout_constraintTop_toBottomOf="@id/passwdEditText"
        app:layout_constraintVertical_bias="0.0776"
        tools:ignore="MissingConstraints,TextContrastCheck,TouchTargetSizeCheck" />

    <TextView
        style="@style/ConstraintElementsStyle"
        android:text="@string/resend_code"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/loginSubmitButton"
        app:layout_constraintVertical_bias="0.042"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_margin="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_login_with"
        android:textColor="#4D261C12"
        android:textSize="10sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginSubmitButton"
        app:layout_constraintVertical_bias="0.0975"
        tools:ignore="SmallSp,TextContrastCheck" />

    <LinearLayout
        style="@style/SignInPageLayoutStyle"
        app:layout_constraintHeight_percent="0.118"
        app:layout_constraintTop_toBottomOf="@id/loginSubmitButton"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintWidth_percent="0.89"
        tools:ignore="MissingConstraints">

        <com.google.android.material.button.MaterialButton
            style="@style/OtherLoginButtonsView"
            android:backgroundTint="@color/red"
            android:gravity="center"
            android:text=""
            android:textColor="@color/black"
            app:icon="@drawable/ic_login_facebook"
            app:iconGravity="textStart"
            app:iconSize="36dp"
            app:strokeColor="@color/lighter_text"
            app:strokeWidth="0.5dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>