<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/onboardBgImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/on_boarding"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:cardCornerRadius="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/onboardTitleTextView"
                style="@style/ConstraintElementsStyle"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.078"
                tools:ignore="MissingConstraints" />
            <TextView
                android:id="@+id/onboardIntroTextView"
                style="@style/ConstraintElementsStyle"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@id/onboardTitleTextView"
                app:layout_constraintVertical_bias="0.113"
                tools:ignore="MissingConstraints" />
            <Button
                android:id="@+id/joinButton"
                style="@style/ConstraintElementsStyle"
                android:paddingVertical="14dp"
                android:text="@string/join_btn_text"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.73"
                tools:ignore="MissingConstraints" />
            <TextView
                android:id="@+id/loginButton"
                style="@style/ConstraintElementsStyle"
                android:text="@string/login_btn_text"
                app:layout_constraintTop_toBottomOf="@id/joinButton"
                app:layout_constraintVertical_bias="0.197"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>